--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - wheel
     - toml
   run:
-    - python >=3.7
+    - python
     - filelock >=3.0.8
     - idna
     - requests >=2.1.0
